--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,9 @@
   "include": [
     "**/*.ts",
     "**/*.tsx",
+    "app/index.jsx",
+    "app/_layout.jsx",
+    "nativewind-env.d.ts",
     ".expo/types/**/*.ts",
     "expo-env.d.ts"
   ]
